PokeDexPackage/main/default/objects/Pokemon__c/Pokemon__c.object-meta.xml
<CustomObject>
    <description>Pokémon are the creatures that inhabit the world of the Pokémon games. They can be caught using Pokéballs and trained by battling with other Pokémon. Each Pokémon belongs to a specific species but may take on a variant which makes it differ from other Pokémon of the same species, such as base stats, available abilities and typings.</description>
    <label>Pokemon</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pocket Monsters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>