PokeDexPackage/main/default/objects/Pokemon__c/fields/Alternate_Order__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Order__c</fullName>
    <description>Order for sorting. Almost national order, except families are grouped together.</description>
    <label>Alternate Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>