PokeDexPackage/main/default/objects/Pokemon__c/fields/Base_Experience__c.field-meta.xml
<CustomField>
    <fullName>Base_Experience__c</fullName>
    <description>Experience gained from defeating this pokemon</description>
    <label>Base Experience</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>