PokeDexPackage/main/default/objects/Pokemon__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>The height of this Pokémon in decimetres.</description>
    <label>Height</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>