PokeDexPackage/main/default/objects/Pokemon__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set for exactly one Pokémon used as the default for each species.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>