PokeDexPackage/main/default/objects/Pokemon__c/fields/Move_Four__c.field-meta.xml
<CustomField>
    <fullName>Move_Four__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Moves are the skills of Pokémon in battle. In battle, a Pokémon uses one move each turn.</description>
    <label>Move Four</label>
    <referenceTo>Move__c</referenceTo>
    <relationshipLabel>Pocket Monsters (Move Four)</relationshipLabel>
    <relationshipName>Pocket_Monsters3</relationshipName>
    <type>Lookup</type>
</CustomField>