PokeDexPackage/main/default/objects/Pokemon__c/fields/Move_Three__c.field-meta.xml
<CustomField>
    <fullName>Move_Three__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Moves are the skills of Pokémon in battle. In battle, a Pokémon uses one move each turn.</description>
    <label>Move Three</label>
    <referenceTo>Move__c</referenceTo>
    <relationshipLabel>Pocket Monsters (Move Three)</relationshipLabel>
    <relationshipName>Pocket_Monsters2</relationshipName>
    <type>Lookup</type>
</CustomField>