PokeDexPackage/main/default/objects/Pokemon__c/fields/Move_Two__c.field-meta.xml
<CustomField>
    <fullName>Move_Two__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Moves are the skills of Pokémon in battle. In battle, a Pokémon uses one move each turn.</description>
    <label>Move Two</label>
    <referenceTo>Move__c</referenceTo>
    <relationshipName>Pocket_Monsters1</relationshipName>
    <type>Lookup</type>
</CustomField>