PokeDexPackage/main/default/objects/Pokemon__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pokemon main type</description>
    <label>Type</label>
    <referenceTo>Type__c</referenceTo>
    <relationshipLabel>Pocket Monsters</relationshipLabel>
    <relationshipName>Pocket_Monsters</relationshipName>
    <type>Lookup</type>
</CustomField>