PokeDexPackage/main/default/objects/Pokemon__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>The weight of this Pokémon in hectograms.</description>
    <label>Weight</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>